# dps-config

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  release-please-config.json
.github/workflows/: bun-test.yml  release.yml  test.yml
docs/llm/plans/2025/11/: 13-implementation-plan.md  13-readme-plan.md
docs/llm/plans/2026/04/: 10-add-project-name.md  10-update-readme-and-refactor-ts-env.md
src/: index.test.ts  index.ts  lib.rs
