[package]
name = "dps-config"
version = "0.6.0"
edition = "2021"
authors = ["Dimensional Pocket"]
license = "MIT"
description = "Configuration management for the DPS ecosystem"
repository = "https://github.com/dimensionalpocket/dps-config"
exclude = [
    "src/*.ts",
    "package.json",
    "bun.lockb",
    "node_modules/",
    ".github/",
    ".npmignore"
]

[lib]
name = "dps_config"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
# No runtime dependencies

[dev-dependencies]
serial_test = "3"
